@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-04-13T02:04:36Z",
-  "count_outdated" : 2994,
-  "uniques_outdated" : 980,
-  "count" : 3007,
-  "uniques" : 990,
+  "timestamp" : "2025-04-14T00:40:38Z",
+  "count_outdated" : 2996,
+  "uniques_outdated" : 981,
+  "count" : 3008,
+  "uniques" : 991,
   "views" : [
-    {
-      "timestamp": "2025-03-30T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-03-31T00:00:00Z",
       "count": 1,
@@ -82,6 +73,15 @@
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-04-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
