@@ -1,12 +1,7 @@
 {
-  "count": 13,
-  "uniques": 10,
+  "count": 12,
+  "uniques": 9,
   "views": [
-    {
-      "timestamp": "2025-03-30T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-03-31T00:00:00Z",
       "count": 1,
@@ -45,6 +40,11 @@
     {
       "timestamp": "2025-04-12T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-04-13T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
